cmake_minimum_required(VERSION 3.16)
project(opencv_test VERSION 1.0)
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -march=native -pthread" )

include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/lib)
find_package(OpenCV REQUIRED)
add_executable(${PROJECT_NAME} func.cpp main.cpp )
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
target_link_libraries(opencv_test libopenblas.a)
target_link_libraries(opencv_test -lm)
target_link_libraries(opencv_test -lpthread)
